# QuirkyVoxel

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  GenerateProject.bat  README.md
Assets/: BiomeData.yaml  BlockData.yaml  BlockInfo.yaml
Assets/Shaders/: Skybox.frag  Skybox.vert  Terrain.frag  Terrain.vert
BuildFiles/: BuildSettings.cmake  CompilerOptions.cmake  ExternalLibraries.cmake  SrcFiles.cmake  imgui.cmake  tracy.cmake
Src/Application/: Application.cpp  Application.h  GameLayer.cpp  GameLayer.h  ImguiContext.cpp  ImguiContext.h  Layer.h  LayerManager.cpp  LayerManager.h  Window.cpp  Window.h  main.cpp
Src/Common/: Assert.h  BuddyAllocator.cpp
Src/Events/: ApplicationEvents.h  Event.h  EventDispatcher.h  KeyboardEvents.h  MouseEvents.h
Src/Layers/: GameLayer.h
Src/Player/: Camera.h  CameraController.cpp  CameraController.h  Player.cpp  Player.h
Src/Renderer/: ChunkRenderManager.cpp  ChunkRenderManager.h  GameRenderer.cpp  GameRenderer.h  MeshManager.cpp  MeshManager.h  SkyboxRenderer.cpp  SkyboxRenderer.h  WorldRenderer.cpp  WorldRenderer.h
Src/Renderer/Camera/: Camera.h  PerspectiveCamera.h
Src/Renderer/Mesh/: GpuMesh.h  GpuMeshHandle.cpp  GpuMeshHandle.h  Mesh.h
Src/Renderer/Primitives/: BufferHandle.h  BufferLayout.h  FrameBuffer.cpp  FrameBuffer.h  GpuBuffer.cpp  GpuBuffer.h  IndexBuffer.cpp  IndexBuffer.h  IndirectBuffer.h  Shader.cpp  Shader.h  ShaderStorageBuffer.cpp  ShaderStorageBuffer.h  Texture2D.cpp  Texture2D.h  TextureArray.cpp  TextureArray.h  Types.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
Src/Utils/: Assert.h  BuddyAllocator.cpp  BuddyAllocator.h  CubeData.h  FileUtils.h  IdGenerator.h  Image.cpp  Image.h  Logger.cpp  Logger.h  Math.h  NonCopyable.h  NonMovable.h  Profiler.h  TaskProcessorPool.h  TextureUtils.h  ThreadSafeVector.h  Traits.h
Src/World/: ChunkManager.cpp  ChunkManager.h  Sky.cpp  Sky.h  World.cpp  World.h  WorldConstants.h  WorldSettings.h  WorldTime.h
Src/World/Biome/: Biome.h  BiomeDataManager.cpp  BiomeDataManager.h
Src/World/Block/: Block.h  BlockDataManager.cpp  BlockDataManager.h  BlockId.h  BlockType.h
Src/World/Chunk/: BlockStorage.h  Chunk.h  ChunkCoord.h  ChunkGpuMesh.h  ChunkMesh.h  ChunkMeshGenerator.cpp  ChunkMeshGenerator.h  ChunkNeighbor.h  ChunkSpan.h  PackedTerrainMesh.h  Subchunk.h  SubchunkMesh.h  SubchunkRenderData.h
Src/World/TerrainGeneration/: SimpleTerrainGen.cpp  SimpleTerrainGen.h  SuperFlatTerrainGen.cpp  SuperFlatTerrainGen.h  TerrainGenerator.cpp  TerrainGenerator.h
